Clean requests & resources, rename requests
