# app/Http/Requests/RegistrationRequest.php
@@ -6,60 +6,8 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-/**
- * @OA\Schema(
- *      title="Register User request",
- *      description="Store User request body data",
- *      type="object",
- *      required={"name", "email", "password", "password_confirmation"}
- * )
- */
 class RegistrationRequest extends FormRequest
 {
-    /**
-     * @OA\Property(
-     *      title="name",
-     *      description="Name of the new user",
-     *      example="Taylor"
-     * )
-     *
-     * @var string
-     */
-    public $name;
-
-    /**
-     * @OA\Property(
-     *      title="email",
-     *      description="User email",
-     *      example="taylor@gmail.com"
-     * )
-     *
-     * @var string
-     */
-    public $email;
-
-    /**
-     * @OA\Property(
-     *      title="password",
-     *      description="User password",
-     *      example=12345678
-     * )
-     *
-     * @var string
-     */
-    public $password;
-
-    /**
-     * @OA\Property(
-     *      title="password_confirmation",
-     *      description="User password confirmation",
-     *      example=12345678
-     * )
-     *
-     * @var string
-     */
-    public $password_confirmation;
-
     public function rules(): array
     {
         return [
