# app/Http/Requests/TaskRequest.php
@@ -6,14 +6,14 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreCourseRequest extends FormRequest
+class TaskRequest extends FormRequest
 {
     public function rules(): array
     {
         return [
             'title' => 'required|string|max:255',
-            'description' => 'required|min:6',
-            'category_id' => 'required|integer',
+            'description' => 'nullable|min:5',
+            'end_time' => 'nullable|after:' . date('Y-m-d'),
         ];
     }
 }
